# PolySynth

./: .gitattributes  .gitignore  AGENTS.md  CLAUDE.md  Justfile  LICENSE  README.md  UI_DEVELOPMENT_GUIDE.md  build_desktop.sh  build_error.txt  build_error2.txt  build_gallery.sh  build_gallery_pages.sh  build_log.txt  crash_log.txt  full_ci_log.txt  index.html  index.md  install_local_macos.sh  pr39_comments.txt  rebuild_and_run.sh  rebuild_and_view_gallery.sh  rebuild_gallery.sh  run_desktop.sh  run_web.sh  test_gallery_visual.sh  view_gallery.sh  view_gallery_pages.sh
ComponentGallery/: CMakeLists.txt  ComponentGallery.cpp  ComponentGallery.h  VRTCaptureHelper.h  config.h
ComponentGallery/config/: ComponentGallery-web.mk
ComponentGallery/projects/: ComponentGallery-wam-controller.mk  ComponentGallery-wam-processor.mk
ComponentGallery/resources/: PolySynthGallery-AAX-Info.plist  PolySynthGallery-AU-Info.plist  PolySynthGallery-CLAP-Info.plist  PolySynthGallery-VST2-Info.plist  PolySynthGallery-VST3-Info.plist  PolySynthGallery-iOS-AUv3-Info.plist  PolySynthGallery-iOS-Info.plist  PolySynthGallery-macOS-AUv3-Info.plist  PolySynthGallery-macOS-AUv3Framework-Info.plist  PolySynthGallery-macOS-Info.plist  PolySynthGallery-macOS-MainMenu.xib  main.rc  main.rc_mac_dlg
ComponentGallery/scripts/: compile_wam.sh
libs/SEA_DSP/: CMakeLists.txt  README.md  TEST_REVIEW_FINDINGS.md  TRADEMARK_POLICY.md
libs/SEA_DSP/include/sea_dsp/: sea_adsr.h  sea_biquad_filter.h  sea_cascade_filter.h  sea_classical_filter.h  sea_delay_line.h  sea_ladder_filter.h  sea_lfo.h  sea_limiter.h  sea_math.h  sea_one_pole_filter.h  sea_oscillator.h  sea_platform.h  sea_prophet_filter.h  sea_sigmoid.h  sea_sk_filter.h  sea_svf.h  sea_tpt_integrator.h  sea_wavetable.h
libs/SEA_DSP/tests/: CMakeLists.txt  TDD_SPEC.md  Test_ADSR.cpp  Test_ADSRHeader.cpp  Test_ADSR_Performance.cpp  Test_BiquadFilter.cpp  Test_CascadeAndSK.cpp  Test_CascadeFilter.cpp  Test_ClassicalFilter.cpp  Test_DelayLine.cpp  Test_Filters.cpp  Test_LFO.cpp  Test_LFOHeader.cpp  Test_LadderFilter.cpp  Test_MathConstants.cpp  Test_OnePoleFilter.cpp  Test_Oscillator.cpp  Test_OscillatorHeader.cpp  Test_Platform.cpp  Test_SKFilter.cpp  Test_SVFHeader.cpp  Test_Sigmoid.cpp  Test_TPTIntegrator.cpp  Test_TypeSafety.cpp  Test_VintageChorus.cpp  Test_VintageDelay.cpp  Test_Wavetable.cpp
src/platform/desktop/: CMakeLists.txt  DemoSequencer.cpp  DemoSequencer.h  ParamMeta.h  PolySynth.RPP  PolySynth.cpp  PolySynth.h  PolySynth_DSP.h  README.md  config.h
src/platform/desktop/config/: PolySynth-ios.xcconfig  PolySynth-mac.xcconfig  PolySynth-wasm.mk  PolySynth-web.mk  PolySynth-win.props
src/platform/desktop/projects/: PolySynth-aax.vcxproj  PolySynth-aax.vcxproj.filters  PolySynth-app.vcxproj  PolySynth-app.vcxproj.filters  PolySynth-clap.vcxproj  PolySynth-clap.vcxproj.filters  PolySynth-vst2.vcxproj  PolySynth-vst2.vcxproj.filters  PolySynth-vst3.vcxproj  PolySynth-vst3.vcxproj.filters  PolySynth-wam-controller.mk  PolySynth-wam-processor.mk  PolySynth-wasm-dsp.mk  PolySynth-wasm-ui.mk
src/platform/desktop/resources/: AUv3Framework.h  IPlugAUViewController_vPolySynth.xib  PolySynth-AAX-Info.plist  PolySynth-AAX-Info.plist.in  PolySynth-AU-Info.plist  PolySynth-AU-Info.plist.in  PolySynth-CLAP-Info.plist  PolySynth-CLAP-Info.plist.in  PolySynth-Pages.xml  PolySynth-VST2-Info.plist  PolySynth-VST3-Info.plist  PolySynth-VST3-Info.plist.in  PolySynth-iOS-AUv3-Info.plist  PolySynth-iOS-Info.plist  PolySynth-iOS-MainInterface.storyboard  PolySynth-iOS-launchScreen.storyboard  main.rc  (+5 more)
src/platform/pico/: CMakeLists.txt  FreeRTOSConfig.h  audio_i2s_driver.cpp  audio_i2s_driver.h  command_parser.cpp  command_parser.h  golden_crc.h  i2s.pio  main.cpp  pico_command_dispatch.cpp  pico_command_dispatch.h  pico_demo.cpp  pico_demo.h  pico_self_test.cpp  pico_self_test.h  pico_synth_app.cpp  pico_synth_app.h  sine_generator.h  song_event.h  song_player.cpp  song_player.h
tests/: CMakeLists.txt  Test_Engine_Audio.cpp  Test_Engine_Basic.cpp  Test_Oscillator.cpp  audio_expectations.json  test_ui_render.py  test_vrt_diff.py
tests/Visual/: package-lock.json  package.json  playwright.config.ts  vitest.config.ts  vrt_config.json
tests/Visual/.storybook/: main.js  preview.js  vitest.setup.ts
tests/Visual/specs/: components.spec.ts  smoke-test.spec.ts
tests/Visual/stories/: component-gallery.stories.js
tests/demos/: demo_adsr.cpp  demo_engine_poly.cpp  demo_factory_presets.cpp  demo_filter_envelope.cpp  demo_filter_resonance.cpp  demo_filter_sweep.cpp  demo_fx_engine.cpp  demo_lfo_filter_wobble.cpp  demo_lfo_tremolo.cpp  demo_lfo_vibrato.cpp  demo_osc_mix.cpp  demo_poly_chords.cpp  demo_polymod.cpp  demo_prophet_filter.cpp  demo_pulse_width.cpp  demo_render_wav.cpp  demo_waveforms.cpp
tests/docs/: index.html
tests/golden/: .gitignore  README.md
tests/golden/desktop-x86_64/: README.md
tests/mocks/: IControl.h  IGraphics.h  IGraphicsStructs.h
tests/sea_test/: CMakeLists.txt  main.cpp
tests/unit/: Test_ADSREnvelope.cpp  Test_ADSRViewModel.cpp  Test_BiquadFilter.cpp  Test_CommandParser.cpp  Test_Effects.cpp  Test_EmbeddedConfig.cpp  Test_Engine_Audio.cpp  Test_Engine_Basic.cpp  Test_Engine_Modulation.cpp  Test_Engine_UpdateState.cpp  Test_FXEngine.cpp  Test_FactoryPresets.cpp  Test_FilterModels.cpp  Test_LFO.cpp  Test_LFO_Routing.cpp  Test_Oscillator.cpp  Test_Oscillator_Waveforms.cpp  Test_ParameterBoundaries.cpp  Test_PicoAudio.cpp  Test_PicoGoldenMaster.cpp  Test_PolyMod.cpp  Test_Portamento.cpp  Test_PresetFileIO.cpp  Test_PresetManager.cpp  Test_SEA_DSP_ADSR.cpp  Test_SEA_DSP_BiquadFilter.cpp  Test_SEA_DSP_ClassicalFilter.cpp  Test_SEA_DSP_LFO.cpp  Test_SEA_DSP_LadderFilter.cpp  Test_SEA_DSP_Math.cpp  Test_SEA_DSP_Oscillator.cpp  Test_SEA_DSP_ProphetFilter.cpp  Test_SEA_DSP_SKFilter.cpp  Test_SEA_DSP_SVF.cpp  Test_SEA_DSP_TPTIntegrator.cpp  Test_SPSCQueue_Concurrent.cpp  Test_SPSCRingBuffer.cpp  Test_Sanitizer_PoisonPill.cpp  Test_SkiaModKnob.cpp  Test_StereoPanning.cpp  (+12 more)
tests/utils/: PicoSignalChain.h  TestHelpers.h  WavWriter.h
(+350 files in other folders)
